src/test/ui/access-mode-in-closures.stderr
error[E0507]: cannot move out of `s.0` which is behind a shared reference
  --> $DIR/access-mode-in-closures.rs:8:15
   |
LL |         match *s { S(v) => v }
   |               ^^     -
   |               |      |
   |               |      data moved here
   |               |      move occurs because `v` has type `Vec<isize>`, which does not implement the `Copy` trait
   |               help: consider borrowing here: `&*s`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
